scripts/nullaway/original/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8.txt
../original/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8/src/be/demmel/fun/jgwcaconstants/bll/GWCAOperations.java:1256: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
        return this.getItemId(itemSlot, null);
                                        ^
    (see http://t.uber.com/nullaway )
../original/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8/src/be/demmel/fun/jgwcaconstants/bll/GWCAOperations.java:1368: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
        return this.getItemInfo(itemSlot, null);
                                          ^
    (see http://t.uber.com/nullaway )
../original/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8/src/be/demmel/fun/jgwcaconstants/bll/GWCAOperations.java:1455: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
        return this.findGoldItem(null);
                                 ^
    (see http://t.uber.com/nullaway )
../original/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8/src/be/demmel/fun/jgwcaconstants/bll/GWCAOperations.java:1597: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
        return getItemExtraId(null, itemSlot);
                              ^
    (see http://t.uber.com/nullaway )
../original/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8/src/be/demmel/fun/jgwcaconstants/bll/GWCAOperations.java:1637: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
        return getItemReq(null, itemSlot);
                          ^
    (see http://t.uber.com/nullaway )
../original/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8/src/be/demmel/fun/jgwcaconstants/bll/GWCAOperations.java:1679: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
        return getDyePositionByColor(dye, null);
                                          ^
    (see http://t.uber.com/nullaway )
../original/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8/src/be/demmel/fun/jgwcaconstants/bll/GWCAOperations.java:1700: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
        return getItemDmgMod(itemSlot, null);
                                       ^
    (see http://t.uber.com/nullaway )
../original/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8/src/be/demmel/fun/jgwcaconstants/bll/SkillType.java:30: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return SHORT_TO_SKILL_TYPE_MAP.get(value);
        ^
    (see http://t.uber.com/nullaway )
../original/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8/src/be/demmel/fun/jgwcaconstants/bll/WeaponType.java:28: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return SHORT_TO_WEAPON_TYPE_MAP.get(value);
        ^
    (see http://t.uber.com/nullaway )
../original/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8/src/be/demmel/fun/jgwcaconstants/bll/GWCAOperation.java:82: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return SHORT_TO_OPERATION_MAP.get(value);
        ^
    (see http://t.uber.com/nullaway )
../original/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8/src/be/demmel/fun/jgwcaconstants/JCommander.java:28: error: [NullAway] @NonNull static field gwcaConnection not initialized
    private static GWCAConnection gwcaConnection;
                                  ^
    (see http://t.uber.com/nullaway )
../original/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8/src/be/demmel/fun/jgwcaconstants/JCommander.java:29: error: [NullAway] @NonNull static field cb not initialized
    private static JComboBox cb, cbType;
                             ^
    (see http://t.uber.com/nullaway )
../original/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8/src/be/demmel/fun/jgwcaconstants/JCommander.java:29: error: [NullAway] @NonNull static field cbType not initialized
    private static JComboBox cb, cbType;
                                 ^
    (see http://t.uber.com/nullaway )
../original/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8/src/be/demmel/fun/jgwcaconstants/JCommander.java:30: error: [NullAway] @NonNull static field wTextField not initialized
    private static JTextField wTextField, lTextField;
                              ^
    (see http://t.uber.com/nullaway )
../original/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8/src/be/demmel/fun/jgwcaconstants/JCommander.java:30: error: [NullAway] @NonNull static field lTextField not initialized
    private static JTextField wTextField, lTextField;
                                          ^
    (see http://t.uber.com/nullaway )
../original/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8/src/be/demmel/fun/jgwcaconstants/JCommander.java:31: error: [NullAway] @NonNull static field wLabel not initialized
    private static JLabel wLabel, lLabel;
                          ^
    (see http://t.uber.com/nullaway )
../original/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8/src/be/demmel/fun/jgwcaconstants/JCommander.java:31: error: [NullAway] @NonNull static field lLabel not initialized
    private static JLabel wLabel, lLabel;
                                  ^
    (see http://t.uber.com/nullaway )
../original/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8/src/be/demmel/fun/jgwcaconstants/JCommander.java:156: error: [NullAway] passing @Nullable parameter 'w' where @NonNull is required
            gwcaConnection.sendPacket(new GWCAPacket(operationToInvoke, w, l));
                                                                        ^
    (see http://t.uber.com/nullaway )
../original/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8/src/be/demmel/fun/jgwcaconstants/JCommander.java:156: error: [NullAway] passing @Nullable parameter 'l' where @NonNull is required
            gwcaConnection.sendPacket(new GWCAPacket(operationToInvoke, w, l));
                                                                           ^
    (see http://t.uber.com/nullaway )
../original/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8/src/be/demmel/fun/jgwcaconstants/Tutorial2.java:44: error: [NullAway] dereferenced expression gwcaConnection is @Nullable
                gwcaConnection.close();
                              ^
    (see http://t.uber.com/nullaway )
../original/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8/src/be/demmel/fun/jgwcaconstants/Tutorial1.java:66: error: [NullAway] dereferenced expression gwcaConnection is @Nullable
                gwcaConnection.close();
                              ^
    (see http://t.uber.com/nullaway )
../original/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8/src/be/demmel/fun/jgwcaconstants/bll/NamedPipeGWCAConnection.java:15: error: [NullAway] initializer method does not guarantee @NonNull field namedPipe (line 12) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public NamedPipeGWCAConnection(File namedPipeLocation) {
           ^
    (see http://t.uber.com/nullaway )
../original/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8/src/be/demmel/fun/jgwcaconstants/bll/NamedPipeGWCAConnection.java:19: error: [NullAway] initializer method does not guarantee @NonNull field namedPipe (line 12) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public NamedPipeGWCAConnection(int pid) {
           ^
    (see http://t.uber.com/nullaway )
../original/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8/src/be/demmel/fun/jgwcaconstants/Tutorial3.java:46: error: [NullAway] dereferenced expression gwcaConnection is @Nullable
                gwcaConnection.close();
                              ^
    (see http://t.uber.com/nullaway )
../original/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8/src/be/demmel/fun/jgwcaconstants/Version.java:39: error: [NullAway] dereferenced expression props.get("version") is @Nullable
            version = props.get("version").toString();
                                          ^
    (see http://t.uber.com/nullaway )
../original/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8/src/be/demmel/fun/jgwcaconstants/MainTestingAllFunctions.java:307: error: [NullAway] dereferenced expression gwcaConnection is @Nullable
                gwcaConnection.close();
                              ^
    (see http://t.uber.com/nullaway )
Note: ../original/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8/src/be/demmel/fun/jgwcaconstants/JCommander.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
26 errors
